[gd_scene load_steps=8 format=3 uid="uid://6mmhgkmoq6oa"]

[ext_resource type="Script" path="res://Components/TankChassis/tank_chassis.gd" id="1_bgbpq"]
[ext_resource type="PackedScene" uid="uid://8bgogrhf5gis" path="res://Components/TankChassis/tankChassisModelParts.tscn" id="2_eebcv"]
[ext_resource type="Texture2D" uid="uid://boi17sxf60ef6" path="res://Art/Images/Arrow.svg" id="3_m6eku"]
[ext_resource type="PackedScene" uid="uid://cv2sditv3ydli" path="res://Components/HealthManager/Hitbox/hitbox.tscn" id="4_3tv7r"]
[ext_resource type="PackedScene" uid="uid://xtnuh7brto2v" path="res://Components/HealthManager/health_manager.tscn" id="5_5raij"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ro8yc"]
radius = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_iotof"]
size = Vector3(1, 0.565918, 1.93127)

[node name="TankChassis" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.502262, 0)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_bgbpq")

[node name="Collider" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_ro8yc")

[node name="TankChassisModelParts" parent="." instance=ExtResource("2_eebcv")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)

[node name="Sprite3D" type="Sprite3D" parent="TankChassisModelParts"]
transform = Transform3D(-0.4, -3.49691e-08, 1.52855e-15, 0, -1.74846e-08, -0.4, 3.49691e-08, -0.4, 1.74846e-08, 0, 0, -5.35322)
texture = ExtResource("3_m6eku")

[node name="TankLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.470504, -0.88348)
text = "PLACEHOLDER"

[node name="GroundRaycast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.574452, 0)
top_level = true
target_position = Vector3(0, -0.5, 0)

[node name="Hitbox" parent="." node_paths=PackedStringArray("health_manager") instance=ExtResource("4_3tv7r")]
health_manager = NodePath("../HealthManager")

[node name="HitboxCollider" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.076646, -0.0293579)
shape = SubResource("BoxShape3D_iotof")

[node name="HealthManager" parent="." instance=ExtResource("5_5raij")]
